# socev

./: CMakeLists.txt  README.md  format.sh
apps/: CMakeLists.txt
apps/can/: CMakeLists.txt
apps/can/src/: main.c
apps/src/: main.c
apps/tcp/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: can_context.h  can_filter.h  can_message.h  can_message_list.h  client.h  client_info.h  client_list.h  definitions.h  epoll_helper.h  linked_list.h  result.h  tcp_context.h  tcp_listener.h  utils.h
lib/src/: can_context.c  can_message.c  can_message_list.c  client.c  client_info.c  client_list.c  epoll_helper.c  tcp_context.c  tcp_listener.c  utils.c
test/: CMakeLists.txt
test/include/: socev_test_class.h
test/src/: can_test.cpp  socev_test_class.cpp  tcp_test.cpp
